--- a/index.html
+++ b/index.html
@@ -8,82 +8,95 @@
 
     <style type="text/css">
         .wrapper {
-            margin-top: 100px;
+            margin-top: 30px;
+        }
+
+        /*.c-tov {
+            background: url("img/soedinennye-shtaty-kaliforniya-779.jpg") no-repeat center;
+            background-size: cover;
+            border: 1px solid rgba(0,0,0,.125);
+            border-radius: .25rem;
+        }*/
+
+        .c-kass {
+            background: url("img/germaniya-bavariya-lake-obersee.jpg") no-repeat center;
+            background-size: cover;
+            background-clip: content-box;
+        }
+        
+        /*===== Media =====*/
+        @media (min-width: 768px) and (max-width: 991px) {
+            .c-tov {
+                margin-bottom: 1.5rem !important;
+            }
+
+            .c-kass {
+                height: 432px !important;
+            }
         }
     </style>
 </head>
 <body>
-    <div class="container-fluid">
-        <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">Navbar</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Dropdown
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                        </div>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#">Disabled</a>
-                    </li>
-                </ul>
-                <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                </form>
-            </div>
-        </nav>
-    </div>
 
     <div class="wrapper">
-        <div class="container-fluid">
+        <div class="container">
             <div class="row">
-                <div class="col">
-                    <div class="card bg-dark text-white">
-                        <img class="card-img" src="img/germaniya-bavariya-lake-obersee.jpg" alt="Card image">
-                        <div class="card-img-overlay">
-                            <h4 class="card-title">Card title</h4>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                            <p class="card-text">Last updated 3 mins ago</p>
+                <div class="col-xl-6 col-lg-12 col-md-12 col-sm-12 col-12">
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="card mb-4">
+                                <div class="card-body">
+                                    <h4 class="card-title">Быстрый поиск</h4>
+                                    <form>
+                                        <div class="form-group">
+                                            <select class="form-control">
+                                                <option selected="selected" disabled="disabled">Выберете что-то там</option>
+                                                <option>1</option>
+                                                <option>2</option>
+                                                <option>3</option>
+                                                <option>4</option>
+                                            </select>
+                                        </div>
+                                        <div class="form-group">
+                                            <select class="form-control">
+                                                <option selected="selected" disabled="disabled">Выберете что-то там</option>
+                                                <option>1</option>
+                                                <option>2</option>
+                                                <option>3</option>
+                                                <option>4</option>
+                                                <option>5</option>
+                                            </select>
+                                        </div>
+                                        <div class="form-group">
+                                            <select class="form-control">
+                                                <option selected="selected" disabled="disabled">Выберете что-то там</option>
+                                                <option>1</option>
+                                                <option>2</option>
+                                                <option>3</option>
+                                                <option>4</option>
+                                                <option>5</option>
+                                            </select>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="card c-tov text-white">
+                                <img class="card-img" src="img/soedinennye-shtaty-kaliforniya-779.jpg" alt="Card image">
+                                <div class="card-img-overlay">
+                                    <h4 class="card-title">Card title</h4>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="d-flex flex-column">
-                        <div class="card h-50 bg-dark text-white">
-                            <img class="card-img" src="img/soedinennye-shtaty-kaliforniya-779.jpg" alt="Card image">
-                            <div class="card-img-overlay">
-                                <h4 class="card-title">Card title</h4>
-                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                                <p class="card-text">Last updated 3 mins ago</p>
-                            </div>
-                        </div>
-                        <div class="card h-50 bg-dark text-white">
-                            <img class="card-img" src="img/soedinennye-shtaty-kaliforniya-779.jpg" alt="Card image">
-                            <div class="card-img-overlay">
-                                <h4 class="card-title">Card title</h4>
-                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                                <p class="card-text">Last updated 3 mins ago</p>
-                            </div>
+                <div class="col-xl-6 col-lg-12 col-md-12 col-sm-12 col-12">
+                    <div class="card c-kass mb-4 h-100">
+                        <div class="card-img-overlay text-white">
+                            <h4 class="card-title">Card title</h4>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
