--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@
                 height: 432px !important;
             }
         }
+
+        @media (min-width: 992px) and (max-width: 1199px) {
+            .c-tov {
+                margin-bottom: 1.5rem !important;
+            }
+
+            .c-kass {
+                height: 582px !important;
+            }
+        }
     </style>
 </head>
 <body>
